# megabot

./: .editorconfig  .env.template  .eslintrc.js  .gitignore  .prettierrc  Cargo.toml  Dockerfile  LICENSE.MD  LICENSE.md  README.md  babel.config.js  docker-compose.yml  example_config.toml  jest.config.js  justfile  megabot.service  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/disabled-workflows/: deploy-development.yml
.github/workflows/: codeql-analysis.yml  deploy-development.yml  deploy-docker.yml  deploy-production.yml  deploy.yml  stale-pull-requests.yml  ubuntu-test.yml
.husky/: pre-commit
specs/: ama.spec.md  comp.spec.md  faq.spec.md  misc.spec.md  modchat.md  modchat.spec.md  pins.spec.md  settings.spec.md
src/: bot.rs  client.js  config.rs  constants.js  dispatcher.js  environment.js  index.js  main.rs  toxicity.rs
src/bots/ama/: constants.js  handler.js  index.js  parser.js
src/bots/comp/: comp.spec.md  constants.js  embed.js  embeds.js  handler.js  index.js
src/bots/faq/: constants.js  index.js
src/bots/misc/: constants.js  index.js
src/bots/modchat/: constants.js  index.js  messageHandler.js  reactionHandler.js
src/bots/monitor/: constants.js  index.js  (+2 more)
src/commands/: analyze.rs  codefmt.rs  go.rs  golink.rs  mod.rs  ping.rs  profile.rs
src/tests/: dispatcher.test.js
src/toxicity/: database.rs
src/utils/: constants.js  dispatcher.js  embed.js  index.js  perms.js  rawMessageProxy.js
(+70 files in other folders)
