[package]
name = "megabot"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
config = "0.13"
kv = { git = "https://github.com/karimElmougi/kv.git" }
log = { version = "0.4", default-features = false }
notify = "5"
parking_lot = "0.12"
pretty_env_logger = "0.4"
serde = "1"
serde_json = "1"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
